# docs/swagger.yaml
@@ -109,7 +109,7 @@ paths:
       summary: Get recommended trainings according to current ruleset.
       tags:
       - Recommendations
-  /rules/interests:
+  /recommended/rules/interests:
     get:
       description: Get the current settings of the interests rule.
       parameters:
@@ -158,7 +158,7 @@ paths:
       summary: Update the interests rule' status for recommended trainings.
       tags:
       - Interests Rule
-  /rules/proximity:
+  /recommended/rules/proximity:
     get:
       description: Get the current settings of the proximity rule.
       parameters:
